Fix for bug #12177 (error file isn't closed)

libmysqld/lib_sql.cc:
  now errorlog is closed during mysql_server_end